nodejs/k8s/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-blue
  namespace: app
  labels:
    app: nodejs
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
      version: blue
  template:
    metadata:
      labels:
        app: nodejs
        version: blue
    spec:
      containers:
        - name: nodejs-app
          image: "yatishdang/nodejs-blue-green:blue"
          ports:
            - containerPort: 3000
