nodejs/k8s/service.yaml
## app-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: app
spec:
  selector:
    app: nodejs
    version: green
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
